# 2026-3-sw-architect-studio-project

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile.rpi  README.md  build-rpi.sh
src/: AudioWorker.cpp  AudioWorker.h  CMU-component.drawio  CMakeLists.txt  FftLib.h  Logger.cpp  Logger.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlaybackWorker.cpp  PlaybackWorker.h  RollingAverage.h  SharedAudio.h  SimWorker.cpp  SimWorker.h  SysStats.cpp  SysStats.h  Timegrapher.cpp  Timegrapher.h  WaveHeader.h  fftlib.cpp
src/Documents/: BeatErrorDisplay.md
src/audio/: AudioManager.cpp  AudioManager.h  AudioRingBuffer.cpp  AudioRingBuffer.h  AudioWorker.cpp  AudioWorker.h  DSPWorker.cpp  DSPWorker.h  IAudioSource.cpp  IAudioSource.h  PlaybackWorker.cpp  PlaybackWorker.h  SharedAudio.h  SimWorker.cpp  SimWorker.h
src/engine/: AcquisitionConfig.h  Measurement.h  MeasurementEngine.cpp  MeasurementEngine.h  MeasurementSummaries.h  MovementSpec.h  RollingLeastSquares.cpp  WatchDiagnostics.cpp  WatchDiagnostics.h  WatchExplainer.cpp  WatchExplainer.h  WatchMath.cpp  WatchMath.h
src/logging/: Logger.cpp  Logger.h  ReplotCounter.h  SysStats.cpp  SysStats.h
src/logs/: log_20260611_131240.csv  log_20260611_131315.csv  log_20260615_204238_48000_fifo.csv  log_20260615_205254_96000_rr_sys.csv
src/logs/EXP-01/: log_20260615_150417.csv  log_20260615_152208.csv  log_20260615_152830.csv  log_20260615_153323.csv  log_20260615_203222_48000_default.csv  log_20260615_203222_48000_default_sys.csv  log_20260615_203730_48000_rr.csv  log_20260615_203730_48000_rr_sys.csv  log_20260615_204238_48000_fifo_sys.csv  log_20260615_204746_96000_default.csv  log_20260615_204746_96000_default_sys.csv  log_20260615_205254_96000_rr.csv  log_20260615_205802_96000_fifo.csv  log_20260615_205802_96000_fifo_sys.csv  log_20260615_210310_192000_default.csv  log_20260615_210310_192000_default_sys.csv  log_20260615_210818_192000_rr.csv  log_20260615_210818_192000_rr_sys.csv  log_20260615_211326_192000_fifo.csv  log_20260615_211326_192000_fifo_sys.csv
src/logs/EXP-02/: log_20260611_141737.csv  log_20260611_141737_sys.csv  log_20260611_145543.csv  log_20260611_145543_sys.csv  log_20260612_132536.csv  log_20260615_152751.csv  log_20260615_152751_sys.csv  log_20260615_162055.csv  log_20260615_162055_sys.csv  log_20260615_163106.csv  log_20260615_163106_sys.csv  log_20260615_165612.csv  log_20260615_165612_sys.csv  log_20260616_140850.csv  log_20260616_140850_sys.csv
src/logs/EXP-03/: .gitkeep  log_20260616_234455_noise10db_96000hz_r1_sys.csv  log_20260616_234512_noise20db_96000hz_r1.csv  log_20260616_234512_noise20db_96000hz_r1_sys.csv  log_20260616_234529_noise30db_96000hz_r1_sys.csv  log_20260616_234546_noise40db_96000hz_r1.csv  log_20260616_234546_noise40db_96000hz_r1_sys.csv  log_20260616_235408_onset002_minpk010_noise00db_r1.csv  log_20260616_235442_onset002_minpk030_noise00db_r1_sys.csv  log_20260616_235459_onset002_minpk030_noise60db_r1.csv  log_20260616_235459_onset002_minpk030_noise60db_r1_sys.csv  log_20260616_235516_onset008_minpk010_noise00db_r1_sys.csv  log_20260616_235533_onset008_minpk010_noise60db_r1_sys.csv  log_20260616_235550_onset008_minpk030_noise00db_r1.csv  log_20260616_235550_onset008_minpk030_noise00db_r1_sys.csv  log_20260616_235607_onset008_minpk030_noise60db_r1_sys.csv  log_20260617_000716_onset002_minpk010_noise00db_r1.csv  log_20260617_000738_onset002_minpk010_noise60db_r1.csv  log_20260617_000738_onset002_minpk010_noise60db_r1_sys.csv  log_20260617_000822_onset002_minpk020_noise60db_r1.csv  log_20260617_002015_onset002_minpk010_noise00db_r2_sys.csv  log_20260617_002107_onset005_minpk010_noise60db_r2.csv  log_20260617_002107_onset005_minpk010_noise60db_r2_sys.csv  log_20260617_002745_onset002_minpk010_noise00db_r3_sys.csv  log_20260617_002832_onset002_minpk010_noise00db_r4_sys.csv  log_20260617_002919_onset002_minpk010_noise00db_r5.csv  log_20260617_002919_onset002_minpk010_noise00db_r5_sys.csv  log_20260617_003007_onset002_minpk010_noise10db_r1.csv  log_20260617_003141_onset002_minpk010_noise10db_r3.csv  log_20260617_003315_onset002_minpk010_noise10db_r5_sys.csv  log_20260617_003402_onset002_minpk010_noise20db_r1_sys.csv  log_20260617_003449_onset002_minpk010_noise20db_r2.csv  log_20260617_003536_onset002_minpk010_noise20db_r3_sys.csv  log_20260617_003623_onset002_minpk010_noise20db_r4.csv  log_20260617_003623_onset002_minpk010_noise20db_r4_sys.csv  log_20260617_003710_onset002_minpk010_noise20db_r5_sys.csv  log_20260617_003844_onset002_minpk010_noise30db_r2_sys.csv  log_20260617_004240_onset002_minpk010_noise40db_r2.csv  (+280 more)
src/rag/: RagRetriever.cpp  RagRetriever.h  vector.db
src/tabs/: BaseGraphTab.h  BeatErrorTab.cpp  BeatErrorTab.h  BeatNoiseScopeTab.cpp  BeatNoiseScopeTab.h  EscapementTab.cpp  EscapementTab.h  FilterScopeTab.cpp  FilterScopeTab.h  LongTermTab.cpp  LongTermTab.h  RadarChartTab.cpp  RadarChartTab.h  RateScopeTab.cpp  RateScopeTab.h  SequenceTab.cpp  SequenceTab.h  SoundPrintTab.cpp  SoundPrintTab.h  SpectrogramTab.cpp  SpectrogramTab.h  SweepScopeTab.cpp  SweepScopeTab.h  TraceTab.cpp  TraceTab.h  VarioTab.cpp  VarioTab.h  WaveformCompTab.cpp  WaveformCompTab.h
src/tests/: engine_file_check.cpp  test_added_tabs.cpp  test_graph_tabs.cpp  test_measurement_engine.cpp  test_measurement_summaries.cpp  test_remaining_tabs.cpp  test_rolling_average.cpp  test_rolling_least_squares.cpp  test_watch_math.cpp
src/tools/: README.md  add_pink_noise.py  analyze_exp04_noise.py  analyze_exp04_scatter.py  analyze_log.py  convert_wav_float32.py  embed_docs.py  extract_exp01.py  gen_exp04_sample_csv.py  make_team_ghibli_image.py  run_exp04.sh  run_experiment1.sh  run_experiment3.sh  run_timegrapher.ps1  run_timegrapher.sh  thread_timeline_dark.py
src/ui/: AppInfo.h  DiagnosisDialog.cpp  DiagnosisDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  SessionController.cpp  SessionController.h  SettingsManager.cpp  SettingsManager.h  SplashScreen.cpp  SplashScreen.h  UserGuideContent.cpp  UserGuideContent.h  UserGuideDialog.cpp  UserGuideDialog.h
(+615 files in other folders)
